--- a/NAND_bad_blocks.mw
+++ b/NAND_bad_blocks.mw
@@ -29,3 +29,12 @@ command.  Those two variants (as opposed to their non-".e"-postfixed versions) s
 The root filesystem uses JFFS2, which is already bad block tolerant.  It, too, has to be written using the
  nand write.e
 command in [[u-boot]]
+
+=== Flash Tool ===
+
+==== sjf2410 (during development) ====
+The [[sjf2410]] tool has a compile-time option to check (and skip) bad blocks.  If we use this for flashing u-boot, we will preserve the bad block info.  
+
+==== for production? ====
+
+I have no idea how flashing during the production process is supposed to happen.
