--- a/NAND_bad_blocks.mw
+++ b/NAND_bad_blocks.mw
@@ -33,7 +33,7 @@ command in [[u-boot]]
 === Flash Tool ===
 
 ==== sjf2410 (during development) ====
-The [[sjf2410]] tool has a compile-time option to check (and skip) bad blocks.  If we use this for flashing u-boot, we will preserve the bad block info.  
+The [[sjf2410-linux]] tool has a compile-time option to check (and skip) bad blocks.  If we use this for flashing u-boot, we will preserve the bad block info, once u-boot steppingstone code has been enhanced to skip bad blocks.
 
 ==== for production? ====
 
