*Empty MediaWiki Message*

--- a/NAND_bad_blocks.mw
+++ b/NAND_bad_blocks.mw
@@ -38,3 +38,11 @@ The [[sjf2410-linux]] tool has a compile-time option to check (and skip) bad blo
 ==== for production? ====
 
 I have no idea how flashing during the production process is supposed to happen.
+
+== Tentative new Flash memory layout ==
+
+ start      size       name
+ 0x00000000 0x00030000 196KB u-boot
+ 0x00030000 0x00004000  16KB u-boot environment 
+ 0x00034000 0x00200000   2MB kernel 
+ 0x00234000 ...              jffs2
