--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -27,11 +27,29 @@ The latest bootloader binary (for NAND) can be found at
 
 == Bootloader development ==
 
+=== QT2410 ===
 If you want to do bootloader development on the QT2410, it's easier to work with a bootloader image that can be downloaded via USB into RAM instead of flashing.
 
 To do so, you need to edit the u-boot/include/configs/qt2410.h file, and change the "if 0" in Line 32 into a "if 1", then recompile with "make".
 
 The resulting "u-boot.bin" is _NOT SUITABLE_ for NAND flash, but only for direct execution from within ram, e.g. by using the [[s3c2410_boot_usb]] program.
+
+
+=== GTA01 ===
+
+Doing bootloader development on the GTA01 is a bit more tricky.  first, we don't have any NOR flash.  Second, there is no other way to boot _but_ from NAND.  Therefore, we also don't have a USB downloader like the QT2410.
+
+The main problem is:  The [[S3C2410 steppingstone]] unconditionally copies the first 4k of flash into its internal SRAM.   That SRAM segment stays unconditionally mapped at physical address zero. How do we get around this
+
+==== Using JTAG to boot from RAM ====
+
+So how can we boot from RAM? We use JTAG to
+
+* reset and halt the cpu at PC=0
+* download a small piece of code for low-level SDRAM timing initialization (overwrite 4k SRAM of steppingstone)
+* assert a break point at address 0x33f80000 (which indicates that the low-level code has finished)
+* download the u-boot RAM image to 0x33f80000
+* resume processing
 
 == Creating bootable images ==
 
