--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -34,22 +34,72 @@ To do so, you need to edit the u-boot/include/configs/qt2410.h file, and change 
 
 The resulting "u-boot.bin" is _NOT SUITABLE_ for NAND flash, but only for direct execution from within ram, e.g. by using the [[s3c2410_boot_usb]] program.
 
-
 === GTA01 ===
 
 Doing bootloader development on the GTA01 is a bit more tricky.  first, we don't have any NOR flash.  Second, there is no other way to boot _but_ from NAND.  Therefore, we also don't have a USB downloader like the QT2410.
 
-The main problem is:  The [[S3C2410 steppingstone]] unconditionally copies the first 4k of flash into its internal SRAM.   That SRAM segment stays unconditionally mapped at physical address zero. How do we get around this
+The main problem is:  The [[S3C2410 Steppingstone]] unconditionally copies the first 4k of flash into its internal SRAM.   That SRAM segment stays unconditionally mapped at physical address zero. How do we get around this
 
 ==== Using JTAG to boot from RAM ====
 
-So how can we boot from RAM? We use JTAG to
+So how can we boot from RAM? We use JTAG / OpenOCD to
 
 * reset and halt the cpu at PC=0
+<pre>
+> reset halt
+target halted in ARM state due to debug request, current mode: Supervisor
+cpsr: 0x400000d3 pc: 0x00000000
+MMU: disabled, D-Cache: disabled, I-Cache: disabled
+</pre>
+
 * download a small piece of code for low-level SDRAM timing initialization (overwrite 4k SRAM of steppingstone)
+<pre>
+> load_binary /space/misc/gta01/u-boot.git/foo.bin 0            
+downloaded 332 byte in 0s 21899us
+</pre>
+
 * assert a break point at address 0x33f80000 (which indicates that the low-level code has finished)
+<pre>
+> bp 0x33f80000 4 hw
+breakpoint added at address 0x33f80000
+</pre>
+
+* run the code up to the break point
+<pre>
+> resume
+Target 0 resumed
+> Target 0 halted
+target halted in ARM state due to breakpoint, current mode: Supervisor
+cpsr: 0x600000d3 pc: 0x33f80000
+MMU: disabled, D-Cache: disabled, I-Cache: enabled
+</pre>
+
 * download the u-boot RAM image to 0x33f80000
+<pre>
+> load_binary /space/misc/gta01/u-boot.git/u-boot.bin 0x33f80000
+downloaded 135692 byte in 6s 567264us
+</pre>
+
 * resume processing
+<pre>
+> resume
+Target 0 resumed
+</pre>
+
+At this point, the display backlight gets bright and we see the following familiar prompt on the serial console:
+<pre>
+U-Boot 1.1.6 (Jan 13 2007 - 23:44:23)
+
+DRAM:  128 MB
+NAND:  64 MiB
+*** Warning - bad CRC or NAND, using default environment
+
+In:    serial
+Out:   serial
+Err:   serial
+Hit any key to stop autoboot:  0 
+GTA01Bv2 # 
+</pre>
 
 == Creating bootable images ==
 
