*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -33,6 +33,7 @@ This is to be the evolving, definitive resource on [[GTA01]] development -- the 
 * [[Free phones]] - A list of FOSS developers to whom we want to give free phones
 * [[Hosting infrastructure]] - Internal documentation on our hosting infrastructure
 * [[Shipping hardware]] - What to do when shipping hardware to Germany
+* [[Meetings]] - Notes from internal discussions.
 
 == Getting started with this wiki ==
 
