*Empty MediaWiki Message*

--- a/Applications.mw
+++ b/Applications.mw
@@ -1,7 +1,7 @@
 == Overview ==
 Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be foolish to expect people to only operate their handsets with stylus. For this reason, some core phone-related applications will be developed with finger (as opposed to stylus navigation) in mind.
 
-{{note| Applications listed on this page are listing in order of priority and by phase. 1st phase is for January. 2nd phase is more long term...when we are ready for mass market appeal.}}
+{{note| Applications listed on this page are listing in order of priority and by phase. 0th phase is for the developers preview release on February 11th, 1st phase is for March 11th. 2nd phase is September 11th...when we are ready for mass market appeal.}}
 
 
 == General Principles ==
@@ -17,9 +17,11 @@ Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be
 
 ==Finger-Based Applications ==
 
-=== 1st Phase ===
+=== 0th Phase ===
 * [[Dialer]]
 * [[Main Menu]]
+
+=== 1st Phase ===
 * [[Music Player]]
 * [[History]]
 
@@ -35,15 +37,17 @@ Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be
 
 ==Stylus-Based Applications ==
 
-=== 1st Phase ===
+=== 0th Phase ===
 * [[Top Panel]]
 * [[Footer]]
 * [[Contacts]]
+* [[Calendar]]
+
+=== 1st Phase ===
 * [[Messages]]
 * [[Application Manager]]
 * [[Today]]
 * [[Feed Reader]]
-* [[Calendar]]
 * [[Preferences]]
 * [[Help Viewer]]
 
@@ -63,11 +67,13 @@ Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be
 
 Panel Applications are individual executables residing in the [[Top Panel]]. They're usually indicating a status and offer a pop-up menu. We are not yet sure whether there is enough screen real estate for this huge number of panel applications.
 
-=== 1st Phase ===
+=== 0th Phase ===
 * [[GSM & GPRS Connection Status]]
-* [[GPS Connection Status]]
 * [[Battery Monitor]]
 * [[Clock]]
+
+=== 1st Phase ===
+* [[GPS Connection Status]]
 * [[Bluetooth Connection Status]]
 * [[USB Connection Status]]
 
