--- a/Applications.mw
+++ b/Applications.mw
@@ -39,7 +39,7 @@ Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be
 
 === 0th Phase ===
 * [[Top Panel]]
-* [[Footer]]
+* [[Footer]] with embedded [[History|Task Manager]]
 * [[Contacts]]
 * [[Calendar]]
 
