--- a/Applications.mw
+++ b/Applications.mw
@@ -23,7 +23,7 @@ Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be
 
 === 1st Phase ===
 * [[Music Player]]
-* [[History]]
+* [[Screen Saver]]
 
 === 2nd Phase ===
 * [[Clocks]]
