--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -48,9 +48,9 @@ http://lists.openmoko.org/mailman/listinfo/community
 
 == Wiki ==
 
-This Wiki is our internal wiki, http://wiki.internal.openmoko.org/. You're already in it, if you're reading this.
+This Wiki is our public wiki, http://wiki.openmoko.org/. You're already in it, if you're reading this.
 
-There is another wiki (with very little content so far) which will be the public wiki once the product is released at http://wiki.openmoko.org/
+There is another wiki which which is for internal use only at https://wiki.internal.openmoko.org/
 
 == Bugzilla ==
 
