--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -61,7 +61,7 @@ Our internal bug tracking system, mainly for hardware issues, is available at ht
 == SVN ==
 There is a [http://subversion.tigris.org/ Subversion] server available at svn.openmoko.org. 
 
-Read-only access is provided via http://svn.openmoko.org/. You should not normally use this URL, it's mainly for later public access after product release.
+Read-only access is provided via https://svn.openmoko.org/. You should not normally use this URL, it's mainly for later public access after product release.
 
 Read-write access for developers is provided via https://svn.openmoko.org:2342
 
