--- a/Applications.mw
+++ b/Applications.mw
@@ -52,7 +52,7 @@ Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be
 
 === 2nd Phase ===
 * [[Search]]
-* [[Media Player (Full)]]
+* [[Media Player]]
 * [[Sketchbook]]
 * [[Picture Viewer]]
 * [[File Browser]]
