--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -60,17 +60,17 @@ Incoming call numbers will be displayed using the [[Call_Notification_Dialog | C
 === 1.2  Indication of Call Progress Signals ===
 This basically means that the user has to be informed about call initiated, other party ringing, busy, etc.  Those audible signals are handled by the TI Calypso.
 
-{{note| Call progress indicators are described in [{{etsi_path}}/0240_701.pdf GSM 02.40]}}
+{{note| Call progress indicators are described in GSM 02.40.}}
 
 === 1.3  Country/PLMN Indication ===
 We need to display the country and the currently selected network operator, as well as the list of available other operators. No problem here.
 
-{{note| The indication is described in [{{etsi_path}}/0230-711.pdf GSM 02.30]}}
+{{note| The indication is described in }}
 
 === 1.4  Country/PLMN Selection ===
 We need to support operator selection. No problem here. 
 
-{{note| The detail is described in [{{etsi_path}}/0211-710.pdf GSM 02.11]}}
+{{note| The detail is described in GSM 02.11}}
 
 === 1.6  IMEI ===
 In TI Calypso.
@@ -103,7 +103,7 @@ Here's what's important to us:
 
 <blockquote>
 "When a dual or multi-band terminal supporting GSM 1900 and another band is registered on a GSM 900, GSM 1800 or GSM 1900 network, it shall support the initiation of an emergency call by entry of 112, 911 or 08 unless a data call is requested."
-[{{etsi_path}}/0230-711.pdf GSM 02.30]}} page 12
+GSM 02.30}} page 12
 </blockquote>
 
 {{note| The emergency calls capabilities are described in [{{etsi_path}}/0203_700.pdf GSM 02.03] and [{{etsi_path}}/0230-711.pdf GSM 02.30]}}
@@ -114,7 +114,7 @@ voice channel, but actually signalled as messages through the GSM network into t
 
 All of this will be handled by the [[Dialer#In_Call_Mode | In Call Mode]] of the [[Dialer]] application.
 
-{{note| More details about support of DTMF are described in [{{etsi_path}}/0203_700.pdf GSM 02.03] and [{{etsi_path}}/0314_701.pdf GSM 03.14]}}
+{{note| More details about support of DTMF are described in GSM 02.03 and GSM 03.14}}
 
 === 1.16 Subscription Identity Management ===
 No problem. This just says the we need to support [[SIM]] cards in their 'normal' way.
@@ -125,7 +125,7 @@ Those are the two standard GSM ciphers for the [[MS]]-[[BTS]] interface. [[TI Ca
 === 1.20 Short Message Service Cell Broadcast ===
 We need to support receiving SMS Cell Broadcast.  Interestingly, the requirement doesn't say we need to actually support displaying them :)  Reception is supposedly handled within [[TI Calypso]]. Anyway, we should display them.
 
-{{note| The short message service cell broadcast teleservice is described in specification [{{etsi_path}}/0203_700.pdf GSM 02.03]}}
+{{note| The short message service cell broadcast teleservice is described in specification GSM 02.03}}
 
 === 1.21 Short Message Service Cell Broadcast DRX ===
 Some battery power saving mode for not listening to all cell broadcasts.  
