--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -106,7 +106,7 @@ Here's what's important to us:
 GSM 02.30}} page 12
 </blockquote>
 
-{{note| The emergency calls capabilities are described in [{{etsi_path}}/0203_700.pdf GSM 02.03] and [{{etsi_path}}/0230-711.pdf GSM 02.30]}}
+{{note| The emergency calls capabilities are described in GSM 02.03 and GSM 02.30}}
 
 === 1.15 Dual Tone Multi Frequency function (DTMF) ===
 We need to be able to initiate [[DTMF]] in accordance with specifications GSM 02.03 [2] and GSM 03.14 [11]. This will put some additional requirements on both the dialler application and the GSM library/daemon infrastructure, since the [[DTMF]] tones are not actually transmitted as tones on the
