*Empty MediaWiki Message*

--- a/Sjf2410-linux.mw
+++ b/Sjf2410-linux.mw
@@ -1,7 +1,15 @@
+
+== General ==
 sjf2410-linux is a linux-enabled version of the sjf2410 tool.  
 
 It allows you to use a [[wiggler]] compatible JTAG Probe to program the NAND and NOR flash attached to the S3C2410.
 
-The latest release can be found at http://people.gta01.hmw-consulting.de/laforge/src/sjf2410-linux/current.
+== Source Code ==
+The latest release can be found at https://buildhost.openmoko.org/tmp/gta01/deploy/images/sjf2410
 
-The current sources are kept in https://svn.gta01.hmw-consulting.de:2342/trunk/src/host/sjf2410-linux/
+== Object Code ==
+The current sources are kept in https://svn.gta01.hmw-consulting.de/trunk/src/host/sjf2410-linux/
+
+== Usage ==
+
+=== To flash a u-boot image into NAND flash ===
