--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -9,7 +9,8 @@ This is to be the evolving, definitive resource on [[GTA01]] development -- the 
 
 * [[Documentation]] - End-user related documentation
 * [[Hardware]] - Hardware-related (developer) documentation
-** [[Debug Board]] -- The debug board for GTAxx hardware.
+** [[Neo1973 Hardware]] - The first FIC phone with OpenMoko
+** [[Debug Board]] -- The debug board for Neo1973 hardware.
 * [[Software]] - GTA01 software-related (developer) documentation
 * [[:Category:ToDo|To-Do List]] - All the articles with things that need to get done
 
