--- a/Supported_microSD_cards.mw
+++ b/Supported_microSD_cards.mw
@@ -7,25 +7,25 @@ At this point, we can recommand Sandisk cards, since they seem to cause the leas
 {| border=1 |
 | Vendor || Model || Capacity || Speed || u-boot || kernel
 |-
-| SanDisk || SDSDQ-128 || 128MB || || {yes} || {unknown}
+| SanDisk || SDSDQ-128 || 128MB || || {{yes}} || {{unknown}}
 |-
-| SanDisk || unknown || 512MB || || {yes} || {yes}
+| SanDisk || unknown || 512MB || || {{yes}} || {{yes}}
 |-
-| SanDisk || SDSDQ-1024-E10M || 1024MB || || {yes} || {yes}
+| SanDisk || SDSDQ-1024-E10M || 1024MB || || {{yes}} || {{yes}}
 |-
-| PNY || P-MICROSD512-BX || 512MB || || {yes} || {unknown}
+| PNY || P-MICROSD512-BX || 512MB || || {{yes}} || {{unknown}}
 |-
-| Intuix || IXMSDM128B60X || 128MB || 60x || {no} || {unknown}
+| Intuix || IXMSDM128B60X || 128MB || 60x || {{no}} || {{unknown}}
 |-
-| Verbatim || 47225 || 1024MB || || {no} || {unknown}
+| Verbatim || 47225 || 1024MB || || {{no}} || {{unknown}}
 |-
-| hama || 55371 || 256MB || || {no} || {unknown}
+| hama || 55371 || 256MB || || {{no}} || {{unknown}}
 |-
-| extreMemory || AE56-1280R || 128MB || || {no} || {unknown}
+| extreMemory || AE56-1280R || 128MB || || {{no}} || {{unknown}}
 |-
-| extreMemory || H256MS05 || 256MB || 60x || {no} || {unknown}
+| extreMemory || H256MS05 || 256MB || 60x || {{no}} || {{unknown}}
 |-
-| Transcend || TS128MUSD || 128MB || || {no} || {unknown}
+| Transcend || TS128MUSD || 128MB || || {{no}} || {{unknown}}
 |-
-| Transcend || TS256MUSD80 || 256MB || 80x || {no} || {unknown}
+| Transcend || TS256MUSD80 || 256MB || 80x || {{no}} || {{unknown}}
 |}
