/* cards by vendor */

--- a/Supported_microSD_cards.mw
+++ b/Supported_microSD_cards.mw
@@ -5,7 +5,7 @@ At this point, we can recommand Sandisk cards, since they seem to cause the leas
 
 == cards by vendor ==
 {| border=1 |
-| Vendor || Model || Capacity || Speed || u-boot || linux 2.6.17.14-fic5
+| Vendor || Model || Capacity || Speed || u-boot 1.1.6 || linux 2.6.17.14-fic5
 |-
 | SanDisk || SDSDQ-128 || 128MB || || {{yes}} || {{yes}}
 |-
