--- a/License.mw
+++ b/License.mw
@@ -1,6 +1,8 @@
 The OpenMoko program uses the following Licenses for its official programs:
 
-== Native Applications: GPL ==
+== Native Software ==
+
+=== Applications: GPL ===
 
 For all '''native'' applications, we use the GNU General Public License (GPL).
 This means that we commit ourselves to the 'standard' copyleft license which
@@ -12,7 +14,7 @@ therefore to be released under the exact same license.
 The future license compatibility is guaranteed by using the FSF-default
 "or any later version" statement.
 
-=== Header ===
+==== Header ====
 
 The '''exact''' following header shall be present in all source code and header files
 of applications that were entirely and originally developed by the OpenMoko project:
@@ -40,7 +42,7 @@ of applications that were entirely and originally developed by the OpenMoko proj
 </pre>
 
 
-== Native Libraries: LGPL ==
+=== Native Libraries: LGPL ===
 
 For all '''native'' libraries, we use the GNU Lesser General Public License (LGPL).
 
@@ -54,7 +56,7 @@ program.
 The future license compatibility is guaranteed by using the FSF-default
 "or any later version" statement.
 
-=== Header ===
+==== Header ====
 
 The '''exact''' following header shall be present in all source code and header files
 of libraries that were entirely and originally developed by the OpenMoko project:
@@ -81,3 +83,12 @@ of libraries that were entirely and originally developed by the OpenMoko project
  *
  */
 </pre>
+
+== Foreign Software ==
+
+If we extend/enhance or contribute back to existing Free Software programs,
+we have to (and will) comply with existing licenses.  This means that all
+our code will be 
+
+# copyright by FIC
+# licensed under the exact same terms of the original program
