/* Native Libraries: LGPL */

--- a/License.mw
+++ b/License.mw
@@ -42,7 +42,7 @@ of applications that were entirely and originally developed by the OpenMoko proj
 </pre>
 
 
-=== Native Libraries: LGPL ===
+=== Libraries: LGPL ===
 
 For all '''native'' libraries, we use the GNU Lesser General Public License (LGPL).
 
