--- a/License.mw
+++ b/License.mw
@@ -90,5 +90,5 @@ If we extend/enhance or contribute back to existing Free Software programs,
 we have to (and will) comply with existing licenses.  This means that all
 our code will be 
 
-# copyright by FIC
+# copyright by OpenMoko
 # licensed under the exact same terms of the original program
