*Empty MediaWiki Message*

--- a/License.mw
+++ b/License.mw
@@ -21,7 +21,7 @@ of applications that were entirely and originally developed by the OpenMoko proj
 
 <pre>
 /*
- * (C) 2006-2007 by OpenMoko, Inc.
+ * Copyright (C) 2006-2007 by OpenMoko, Inc.
  * Written by $Authors_Name <$Authors_email>
  * All Rights Reserved
  *
@@ -63,7 +63,7 @@ of libraries that were entirely and originally developed by the OpenMoko project
 
 <pre>
 /*
- * (C) 2006-2007 by OpenMoko, Inc.
+ * Copyright (C) 2006-2007 by OpenMoko, Inc.
  * Written by $Authors_name <$Authors_email>
  * All Rights Reserved
  *
