--- a/Neo_1973_audio_subsystem.mw
+++ b/Neo_1973_audio_subsystem.mw
@@ -69,6 +69,10 @@ playback
 ** LM4857: arrives on RIN/LIN
 ** routed on LM4856 to LHP/RHP
 
+=== sound playback via A2DP ===
+
+FIXME
+
 === voice recording === 
 
 This is mainly used to record notes
