/* cards by vendor */

--- a/Supported_microSD_cards.mw
+++ b/Supported_microSD_cards.mw
@@ -13,7 +13,7 @@ At this point, we can recommand Sandisk cards, since they seem to cause the leas
 |-
 | SanDisk || SDSDQ-1024-E10M || 1024MB || || {{yes}} || {{yes}}
 |-
-| SanDisk || SDSDQU-2048-E10M || 2048MB || || {{unknown}} || {{unknown}}
+| SanDisk || SDSDQU-2048-E10M || 2048MB || || {{yes}} || {{unknown}}
 |-
 | PNY || P-MICROSD512-BX || 512MB || || {{yes}} || {{yes}}
 |-
