*Empty MediaWiki Message*

--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -20,3 +20,11 @@ Hammerhead AGPS from Global Locate
 == SD-Card ==
 
 microSD aka Transflash
+
+== Audio ==
+
+=== Analog wired Headset ===
+
+There's a four-ring 2.5mm stereo jack which provides connectivity to old-fashined wired headsets.
+
+The headsets used by Motorola smartphones (A780,A1200, ...) have a compatible configuration
