*Empty MediaWiki Message*

--- a/Debug_Board_v1.mw
+++ b/Debug_Board_v1.mw
@@ -51,7 +51,7 @@ There's a [[Connecting GTA01Bv2 with Debug Board]] foto story ;)
 * Pin 1 can be found next to the corner of the PCB (small white circular mark printed on PCB).
 * Make sure to have the red wire of the ribbon cable go to Pin 1
 
-==== Power Suppply ====
+==== Power Supply ====
 
 * If the phone is self-powered, there is no need to connect a power supply for JTAG, USB and serial port, since those are phone-powered
 * If you need Ethernet, you will have to either supply power via the USB device jack, or via a +5V power supply.
