separate internal/public lists, add more lists

--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -1,50 +1,68 @@
 == Mailing lists ==
 
-There are a number of development related mailinglsts at both  [http://lists.internal.openmoko.org/ lists.internal.openmoko.org] and [http://lists.openmoko.org/ lists.openmoko.org].
+=== Internal Mailing Lists ===
 
-=== coreteam@lists.internal.openmoko.org ===
+Those are for FIC / OpenMoko employees and external partners/contractors/cunsultants only.
+
+==== coreteam@lists.internal.openmoko.org ====
 
 Product Management and Consulting only, for strategic discussions. Better known under its alias <b>coreteam@openmoko.org</b>
 
-=== neo1973-devel@lists.internal.openmoko.org ===
+==== neo1973-devel@lists.internal.openmoko.org ====
 
 This is the main internal development list about anything regarding the Neo1973 hardware, the software development for it, etc.
 
 https://lists.internal.openmoko.org/mailman/listinfo/neo1973-devel
 
-=== framework-devel@lists.openmoko.org ===
-
-This is a (soon completely public) mailinglist on the OpenMoko Framework
-
-http://lists.openmoko.org/mailman/listinfo/framework-devel
-
-=== distro-devel@lists.openmoko.org ===
-
-This is a (soon completely public) mailinglist on the OpenMoko Distribution.  Here issues such as ipk packaging related and root fs image related topics should be discussed.  Also, questions regarding the OpenEmbedded based build process go here.
-
-http://lists.openmoko.org/mailman/listinfo/distro-devel
-
-=== devel@lists.internal.openmoko.org ===
+==== devel@lists.internal.openmoko.org ====
 
 Old developer list, became an alias for neo1973-devel.
 
-=== buglog@lists.openmoko.org ===
+==== buglog@lists.internal.openmoko.org ====
 
-A read-only list where every status update to a bug (bugzilla entry) will get posted.  Nice to keep updated on the bugsquashing progress
+A read-only list where every status update to a hardware bug (bugzilla entry) will get posted.  Nice to keep updated on the bug squashing progress
+
+https://lists.internal.openmoko.org/mailman/listinfo/buglog
+
+=== Public Mailing Lists ===
+
+There are a number of development related mailinglsts at http://lists.openmoko.org/
+
+==== buglog@lists.openmoko.org ====
+
+A read-only list where every status update to a bug (bugzilla entry) will get posted.  Nice to keep updated on the bug squashing progress
 
 http://lists.openmoko.org/mailman/listinfo/buglog
 
-=== commitlog@lists.openmoko.org ===
+==== commitlog@lists.openmoko.org ====
 
 A read-only list where every source code change (commit to the subversion server) gets posted.  Nice to keep posted on development progress.
 
 http://lists.openmoko.org/mailman/listinfo/commitlog
 
-=== community@lists.openmoko.org ===
+==== community@lists.openmoko.org ====
 
 This is a public mailinglist for discussion of our user + developer community out there
 
 http://lists.openmoko.org/mailman/listinfo/community
+
+==== openmoko-devel@lists.openmoko.org ====
+
+This is a public mailinglist for discussion of developers who want to write code for the Neo1973
+
+http://lists.openmoko.org/mailman/listinfo/openmoko-devel
+
+==== framework-devel@lists.openmoko.org ====
+
+This is a (soon completely public) mailinglist on the OpenMoko Framework
+
+http://lists.openmoko.org/mailman/listinfo/framework-devel
+
+==== distro-devel@lists.openmoko.org ====
+
+This is a (soon completely public) mailinglist on the OpenMoko Distribution.  Here issues such as ipk packaging related and root fs image related topics should be discussed.  Also, questions regarding the OpenEmbedded based build process go here.
+
+http://lists.openmoko.org/mailman/listinfo/distro-devel
 
 == Wiki ==
 
