--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -76,6 +76,12 @@ Our bug tracking system for software issues (which will become public at product
 
 Our internal bug tracking system, mainly for hardware issues, is available at http://bugzilla.internal.openmoko.org/
 
+== IRC ==
+
+There's a #openmoko channel on irc.freenode.net.
+
+There's also a #openmoko-devel channel, which is for OpenMoko internal developers only, sorry.
+
 == SVN ==
 There is a [http://subversion.tigris.org/ Subversion] server available at svn.openmoko.org. 
 
