add errata info

--- a/Debug_Board_v1.mw
+++ b/Debug_Board_v1.mw
@@ -45,6 +45,7 @@ There's a [[Connecting GTA01Bv2 with Debug Board]] foto story ;)
 * The socket is called "P4", which is written in small white letters next to it on the PCB.  If you're looking at the three female DB-Ports (from the plug side), it is the left port.
 * You can use any standard USB-Serial converter and plug it directly onto the DB9-socket. There's no level-shifting required.
 
+ NOTE: Please see [[Debug Board#Errata]] below!
 ==== JTAG ====
 
 * The 20pin JTAG header is a standard ARM JTAG.
@@ -62,7 +63,7 @@ S5 (small white button in corner of PCB) is a reset button.  If you press it, it
 
 === Seven-Segment Display ===
 
-FIXME
+FIXME. We never tried to make them work.
 
 === Ethernet ===
 
@@ -70,11 +71,17 @@ There currently is no software/driver support for the Ethernet port in OpenMoko.
 
 === Secure Media ===
 
-FIXME
+FIXME. Nobody has successfully tried to make it work.
 
 == Questions ==
 
 * Can it also be connected to [[GTA01v4]] ?
+
+== Errata ==
+
+=== Serial Port / GSM_EN design problem ===
+
+The debug board and [[GTA01Bv2]] try to drive the same line (GSM_EN) which switches between serial console and GSM Modem.  To resolve this conflict (and give ownership of that signal to GTA01), you need to unsolder both R105 and R106.  Those resistors are located very close to the 2x10pin JTAG header.
 
 == Bugs/Problems ==
 
