--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -10,7 +10,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 * [[Documentation]] - End-user related documentation
 * [[Hardware]] - Hardware-related (developer) documentation
 ** [[Neo1973 Hardware]] - The first FIC phone with OpenMoko
-*** [[isassembling Neo1973]]
+*** [[Disassembling Neo1973]]
 ** [[Debug Board]] -- The debug board for Neo1973 hardware.
 * [[Software]] - GTA01 software-related (developer) documentation
 * [[:Category:ToDo|To-Do List]] - All the articles with things that need to get done
