*Empty MediaWiki Message*

--- a/Disassembling_Neo_1973.mw
+++ b/Disassembling_Neo_1973.mw
@@ -2,10 +2,8 @@
 
 {{note|This page was written as of GTA01Bv3 hardware revision and might need updating soon}}
 
-== Back side of Neo1973 ==
+[[Image:Gta01b v3 case back white.jpg|thumb|640px|Back side of Neo1973]]
 
-[[Image:Gta01b v3 case back white.jpg|thumb|640px]]
+[[Image:Gta01b v3 case back open white.jpg|thumb|640px|Opening back cover]]
 
-== Opening back cover ==
-
-[[Image:Gta01b v3 case back open white.jpg|thumb|640px]]
+[[Image:Gta01b v3 case side opening white.jpg|640px|Carefully removing top cover]]
