*Empty MediaWiki Message*

--- a/Disassembling_Neo_1973.mw
+++ b/Disassembling_Neo_1973.mw
@@ -6,4 +6,4 @@
 
 [[Image:Gta01b v3 case back open white.jpg|thumb|640px|Opening back cover]]
 
-[[Image:Gta01b v3 case side opening white.jpg|640px|Carefully removing top cover]]
+[[Image:Gta01b v3 case side opening white.jpg|thumb|640px|Carefully removing top cover]]
