*Empty MediaWiki Message*

--- a/Disassembling_Neo_1973.mw
+++ b/Disassembling_Neo_1973.mw
@@ -2,8 +2,24 @@
 
 {{note|This page was written as of GTA01Bv3 hardware revision and might need updating soon}}
 
-[[Image:Gta01b v3 case back white.jpg|thumb|640px|Back side of Neo1973]]
+== Back side of Neo1973 ==
+[[Image:Gta01b v3 case back white.jpg|700px]]
 
-[[Image:Gta01b v3 case back open white.jpg|thumb|640px|Opening back cover]]
+== Opening back cover ==
+[[Image:Gta01b v3 case back open white.jpg|700px]]
 
-[[Image:Gta01b v3 case side opening white.jpg|thumb|640px|Carefully removing top cover]]
+{{note| You now need to remove the two Torx screws (T6x40)}}
+
+== Carefully remove top cover ==
+[[Image:Gta01b v3 case side opening white.jpg|700px]]
+
+== Top case lid removed ==
+[[Image:Gta01b v3 case top open white.jpg|700px]]
+
+== Lifting the PCB on the left side ==
+{{note|You have to bend the plastic case a bit outwards until the headphone jack on the left side of the device becomes loose}}
+[[Image:Gta01b v3 case top open pcb lift white.jpg|700px]]
+
+== Removing PCB from case ==
+{{note|Since the PCB now is loose on one side, you can carefully pull the USB socket and GPS antenna connector out of the right side of the case, and then flip the PCB upwards}}
+[[Image:Gta01b v3 case top open pcb lifted.jpg|700px]]
