/* Removing PCB from case */

--- a/Disassembling_Neo_1973.mw
+++ b/Disassembling_Neo_1973.mw
@@ -20,6 +20,16 @@
 {{note|You have to bend the plastic case a bit outwards until the headphone jack on the left side of the device becomes loose}}
 [[Image:Gta01b v3 case top open pcb lift white.jpg|700px]]
 
-== Removing PCB from case ==
+== Removing PCB from case frame ==
 {{note|Since the PCB now is loose on one side, you can carefully pull the USB socket and GPS antenna connector out of the right side of the case, and then flip the PCB upwards}}
 [[Image:Gta01b v3 case top open pcb lifted.jpg|700px]]
+
+== Empty case frame ==
+
+[[Image:Gta01b v3 case empty white.jpg|700px]]
+
+You can actually see the two stereo speakers beneath the translucent cover, and next to it the small vibrator motor.
+
+== GSM Antenna ==
+
+[[Image:Gta01b v3 gsm antenna.jpg|700px]]
