/* cards by vendor */  Patriot no, Kingston yes

--- a/Supported_microSD_cards.mw
+++ b/Supported_microSD_cards.mw
@@ -30,4 +30,8 @@ At this point, we can recommand Sandisk cards, since they seem to cause the leas
 | Transcend || TS128MUSD || 128MB || || {{no}} || {{yes}}
 |-
 | Transcend || TS256MUSD80 || 256MB || 80x || {{no}} || {{yes}}
+|-
+| Patriot ||  PSF128MCSD-RC || 128MB || ? || {{no}} || ?
+|-
+| Kingston || SD-C01G || 1GB || ? || {{yes}} || ?
 |}
