/* Environment */ Removed the "=" from the setenv command.

--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -169,7 +169,7 @@ QT2410 #
 Note: When setting multiple commands, e.g. for bootcmd, you need to escape the ';', for instance
 
 <pre>
-QT2410 # setenv bootcmd=mmcinit\; ext2load mmc 0 0x32000000 uImage\; bootm 0x32000000
+QT2410 # setenv bootcmd mmcinit\; ext2load mmc 0 0x32000000 uImage\; bootm 0x32000000
 </pre>
 
 === MMC/SD ===
