/* bootable Kernel image */ update with link to deploy directory where images can really be found

--- a/Kernel.mw
+++ b/Kernel.mw
@@ -32,6 +32,7 @@ The kernel build is executed as normal.  We actually only need the "vmlinux" tar
 == bootable Kernel image ==
 
 A bootable kernel image called ''uImage'' is available from [http://people.gta01.hmw-consulting.de/laforge/src/kernel/current/]
+(I didn't find one there, but look in [https://buildhost.openmoko.org/tmp/gta01/deploy/images/])
 
 == creating a bootable kernel image ==
 u-boot needs all images (such as kernel, initrd, ...) in the form of an uImage.  This is basically just a special header adding CRC protection, version information, etc. Pleaes see [[u-boot]] for details.
