/* Environment */ updated with newer bootargs

--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -172,6 +172,12 @@ Note: When setting multiple commands, e.g. for bootcmd, you need to escape the '
 QT2410 # setenv bootcmd mmcinit\; ext2load mmc 0 0x32000000 uImage\; bootm 0x32000000
 </pre>
 
+As of 2007-02-01, laforge says the correct bootargs are:
+<pre>
+rootfstype=jffs2 root=/dev/mtdblock4 console=ttySAC0,115200 console=tty0 loglevel=8
+</pre>
+Note that this requires flashing the jffs2 root image into NAND.
+
 === MMC/SD ===
 
 in order to initialize a MMC/SD card, you have to use the ``mmcinit'' command.
