restructuring the page, add driver status

--- a/Neo_1973_audio_subsystem.mw
+++ b/Neo_1973_audio_subsystem.mw
@@ -1,8 +1,8 @@
-== Voice Calls ==
+=== Voice Calls ===
 
-=== using phone-internal microphone and speaker ===
+==== using phone-internal microphone and speaker ====
 
-This is teh default case.
+This is the default case.
 
 * microphone path
 ** input: built in microphone attached to wolfson MIC2/MIC2N
@@ -14,7 +14,11 @@ This is teh default case.
 ** arrives on LM4857 RIN/LIN
 ** routed on LM4856 to EP+/EP-
 
-=== using analog (4pin 2.5mm) headset ===
+===== Driver Status =====
+
+This should be supported by ASoC 0.13rc2 (-moko6 kernel) on.
+
+==== using analog (4pin 2.5mm) headset ====
 
 This is also a quite common case, since we ship the headset with the
 phone
@@ -31,7 +35,11 @@ Headset Detection is done via GPIO on S3C2410
 ** arrives on LM4857 RIN/LIN
 ** routed on LM4856 to LHP/RHP
 
-=== using bluetooth headset ===
+===== Driver Status =====
+
+UNKNOWN
+
+==== using Bluetooth headset ====
 
 Headset detection via software
 
@@ -46,9 +54,13 @@ Headset detection via software
 ** wolfson: routes digital signal to PCM
 ** arrives on bluetooth chip via PCM
 
-== Multimedia ==
+===== Driver Status =====
 
-=== sound playback to speakers ===
+UNKNOWN
+
+=== Multimedia ===
+
+==== sound playback to speakers ====
 
 This is an important mode since it is also required for ringtone
 playback
@@ -60,7 +72,11 @@ playback
 ** LM4857: arrives on RIN/LIN
 ** LM4857: route to LLS+-/RLS+-
 
-=== sound playback to headphone ===
+===== Driver Status =====
+
+This is working since ASoC 0.13rc2 (-moko6 kernel)
+
+==== sound playback to headphone ====
 
 * speaker path
 ** input: from S3C2410 via IIS interface to wolfson
@@ -69,11 +85,19 @@ playback
 ** LM4857: arrives on RIN/LIN
 ** routed on LM4856 to LHP/RHP
 
-=== sound playback via A2DP ===
+===== Driver Status =====
+
+This is working since ASoC 0.13rc2 (-moko6 kernel)
+
+==== sound playback via A2DP =====
 
 FIXME
 
-=== voice recording === 
+===== Driver Status =====
+
+UNKNOWN
+
+==== voice recording ==== 
 
 This is mainly used to record notes
 
@@ -82,24 +106,36 @@ This is mainly used to record notes
 ** or from headset
 ** or bluetooth headset
 
-== Call recording ==
+===== Driver Status =====
+
+UNKNOWN
+=== Call recording ===
 
 This is a nice wishlist item.  The user should be able to receive the
 full-duplex audio from the wolfson codec, and record it using the
 S3C2410 IIS.  
 
-=== recording ===
+==== recording ====
 
 FIXME
+===== Driver Status =====
 
-=== playback ===
+UNKNOWN
+==== playback ====
+
+FIXME
+===== Driver Status =====
+
+UNKNOWN
+
+== Userspace Sound Control Daemon
 
 FIXME
 
 == Important issues/pitfalls ==
 
-=== Ringtone while hedset playbac ===
+=== Ringtone while headset playback ===
 
 If the user is listening to music on the headset, do we want to mix the
-ringtones only into the headset audio, or actually interrupt and play it
+ring tones only into the headset audio, or actually interrupt and play it
 on the speaker?
