/* using phone-internal microphone and speaker */

--- a/Neo_1973_audio_subsystem.mw
+++ b/Neo_1973_audio_subsystem.mw
@@ -18,6 +18,10 @@ This is the default case.
 
 This should be supported by ASoC 0.13rc3 (-moko7 kernel) on.
 
+===== asound.state =====
+
+https://people.openmoko.org/laforge/gta01/gta01b_v2/alsa/gsmhandset.state
+
 ==== using analog (4pin 2.5mm) headset ====
 
 This is also a quite common case, since we ship the headset with the
