/* sound playback to speakers */

--- a/Neo_1973_audio_subsystem.mw
+++ b/Neo_1973_audio_subsystem.mw
@@ -80,6 +80,10 @@ playback
 
 This is working since ASoC 0.13rc2 (-moko6 kernel)
 
+===== asound.state =====
+
+https://people.openmoko.org/laforge/gta01/gta01b_v2/alsa/stereoout.state
+
 ==== sound playback to headphone ====
 
 * speaker path
