--- a/NAND_bad_blocks.mw
+++ b/NAND_bad_blocks.mw
@@ -53,6 +53,20 @@ If the kernel partition contains more bad blocks, the start address of the rootf
 
 Those calculations have been implemented as u-boot "dynpart" command.  Once you issue "dynpart", the partition configuration is put in the "mtdparts" environment variable.  If you "saveenv" the environment, it is saved into the non-volatile environment partition.
 
+==== Bad Block Table (BBT) ====
+
+Since the usual bad block marker in the OOB area does not allow us to distinguish between factory-bad and worn-out-bad blocks, we need to store this information elsewhere.  This places is called bad-block table (BBT), and it is placed as a bitmap into the last two working/good blocks at the end of NAND.  To increase security, a backup of those two blocks is kept in the next two working/good blocks just before.
+
+The BBT location itself is identified by special markers (BBT0/BBT1) in the OOB area of the first page of the respective erase blocks.
+
+The BBT consists of two bits per block, which distinguish the three conditions (factory-bad/worn-out/good).
+
+Both u-boot and Linux implement the same BBT layout and thus interoperate quite well.
+
+===== BBT creation =====
+
+The BBT is created once a BBT-implementing u-boot is started for the first time.  The BBT scanning code assumes that the NAND is '''completely erased''', i.e. only contains 0xff as content.  Any block that contains bytes != 0xff in the OOB is marked as "factory bad" block.
+
 === Kernel ===
 
 The kernel is contained in its own partiton [[QT2410#NAND]].  We have to flash it using the
